--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
            
         </nav>
     </header>
+    <!-- banner section -->
     <section id="banner">
         <div class="banner-content">
             <h2>Hi, I  am</h2>
@@ -39,6 +40,33 @@
         </div>
         <div class="banner-image">
             <img src="./images/image-1.png" alt="image">
+        </div>
+    </section>
+    <!-- about section -->
+    <section id="about">
+        <div class="about-container">
+            <div class="section-heading">
+                <h2>About Me</h2>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            </div>
+            <div class="about-info">
+                <div class="info-card">
+                    <p>Name:</p>
+                    <h4>MD Siam Miya</h4>
+                </div>
+                <div class="info-card">
+                    <p>Email:</p>
+                    <h4>siammiya2024@gamil.com</h4>
+                </div>
+                <div class="info-card">
+                    <p>Date of barth:</p>
+                    <h4>10 Feb 2003</h4>
+                </div>
+                <div class="info-card">
+                    <p>From:</p>
+                    <h4>Dhaka, Bangladesh</h4>
+                </div>
+            </div>
         </div>
     </section>
 </body>
