--- a/index.html
+++ b/index.html
@@ -69,5 +69,44 @@
             </div>
         </div>
     </section>
+    <!-- skills section -->
+    <section id="skills">
+        <div class="skills-container">
+            <div class="skills-heading">
+                <h2>What I do</h2>
+                <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <div class="skills-content">
+                <div class="skills-card">
+                     <div>
+                        <img src="./images/icons/js.png" alt="icon">
+                     </div>
+                     <h3>Vanilla JavaScript</h3>
+                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills-card">
+                     <div>
+                        <img src="./images/icons/react.png" alt="icon">
+                     </div>
+                     <h3>React</h3>
+                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills-card">
+                     <div>
+                        <img src="./images/icons/nodejs.png" alt="icon">
+                     </div>
+                     <h3>Node.js</h3>
+                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills-card">
+                     <div>
+                        <img src="./images/icons/mongo.png" alt="icon">
+                     </div>
+                     <h3>MongoDB</h3>
+                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
